# A-LOAM

./: CMakeLists.txt  package.xml
config/: config_indoor.yaml  params.yaml  params_outdoor.yaml
include/aloam_velodyne/: common.h  compute_sim3.hpp  filter_state.hpp  imu_process.hpp  map_buffer.hpp  map_viewer.hpp  parameters.h  pose_local_parameterization.hpp
launch/: aloam_map_viewer.launch  aloam_velodyne_VLP_16.launch  run_indoor.launch
rviz_cfg/: aloam_velodyne.rviz  aloam_velodyne_modifier.rviz
src/: ekfMapping.cpp  ekf_mapping.cpp  laserMapping.cpp  laserOdometry.cpp  lidarFactor.hpp  lidarMapping.cpp  mapViewer.cpp  parameters.cpp  pointProcess.cpp  scanRegistration.cpp
